--- a/demo/consumer-dev.yml
+++ b/demo/consumer-dev.yml
@@ -1,2 +1,13 @@
-user:
-  name: cx
+server:
+  port: 8001
+
+spring:
+  application:
+    name: consumer-server-1
+
+eureka:
+  client:
+    register-with-eureka: true # 默认是打开的
+    fetch-registry: true # 默认是打开的
+    service-url:
+      defaultZone: http://127.0.0.1:7001/eureka
