--- a/demo/consumer-dev.yml
+++ b/demo/consumer-dev.yml
@@ -11,3 +11,8 @@ eureka:
     fetch-registry: true # 默认是打开的
     service-url:
       defaultZone: http://127.0.0.1:7001/eureka
+
+# openfeign 开启 hystrix 的支持
+feign:
+  hystrix:
+    enabled: true
