--- a/demo/zuul-dev.yml
+++ b/demo/zuul-dev.yml
@@ -11,6 +11,7 @@ eureka:
     fetch-registry: true # 默认是打开的
     service-url:
       defaultZone: http://127.0.0.1:7001/eureka
+    registry-fetch-interval-seconds: 2 # 每两秒就从注册中拉一次地址信息
 zuul:
   ignored-services: "*"
   routes:
