--- a/demo/consumer-dev.yml
+++ b/demo/consumer-dev.yml
@@ -12,7 +12,7 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:7001/eureka
     registry-fetch-interval-seconds: 2
-# openfeign 开启 hystrix 的支持
+# openfeign 开启 hystrix 熔断降级
 feign:
-  hystrix:
-    enabled: true
+  circuitbreaker:
+    enabled: true 
