--- a/demo/consumer-dev.yml
+++ b/demo/consumer-dev.yml
@@ -14,5 +14,5 @@ eureka:
     registry-fetch-interval-seconds: 2
 # openfeign 开启 hystrix 熔断降级
 feign:
-  circuitbreaker:
-    enabled: true 
+  hystrix:
+    enabled: true
